Cannot use DllMain in hotspot for static builds

XMLWordPrintable

    • b07

      To be able to properly support static builds on Windows in JDK-8346377, we cannot use DllMain, for two reasons:

      1) This is not called for statically linked libraries, and
      2) There are multiple DllMain definitions throughout the JDK native libraries, causing name collisions.

      While it could have been possible to keep the DllMain function for non-static builds and just use an alternative solution for static builds, I think it is preferable to have a single solution that works as well for both static and dynamic builds.

            Assignee:
            Magnus Ihse Bursie
            Reporter:
            Magnus Ihse Bursie
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: