8346433: Cannot use DllMain in hotspot for static builds