src/hotspot/os/windows/symbolengine.hpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2024, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2017 SAP SE. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -58,7 +58,6 @@ namespace SymbolEngine {
   // missing - if any, and the dbhelp API version)
   void print_state_on(outputStream* st);
 
-  // Call at DLL_PROCESS_ATTACH.
   void pre_initialize();
 
 };
